infrastructure/k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pelmeshki-frontend-service
spec:
  selector:
    app: pelmeshki-frontend
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
