infrastructure/k8s/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pelmeshki-ingress
  labels:
    name: pelmeshki-ingress
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: ian-bodrievskii.ru-tls
      hosts:
        - "ian-bodrievskii.ru"
  rules:
    - host: ian-bodrievskii.ru
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: pelmeshki-frontend-service
              port:
                number: 80
